--- a/zfs-debian-pve/control
+++ b/zfs-debian-pve/control
@@ -158,7 +158,7 @@ Description: Native OpenZFS root filesystem capabilities for Linux
 Package: zfsutils
 Section: admin
 Architecture: linux-any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}, sudo
 Suggests: samba-common-bin (>= 3.0.23), nfs-kernel-server, zfs-initramfs
 Conflicts: zfs, zfs-fuse
 Replaces: zfs
