--- a/zfs-debian-pve/rules
+++ b/zfs-debian-pve/rules
@@ -13,7 +13,7 @@ REVISION := $(shell dpkg-parsechangelog \
 META_DISTDIR := $(CURDIR)/$(META_NAME)-$(VERSION)/
 
 %:
-	dh $@ --with autoreconf,dkms
+	dh $@ --with autoreconf,dkms,systemd
 
 override_dh_auto_configure:
 	@# Embed the downstream version in the module.
@@ -27,6 +27,8 @@ override_dh_auto_configure:
 	  --bindir=/bin \
 	  --sbindir=/sbin \
 	  --libdir=/lib \
+	  --with-systemdunitdir=/lib/systemd/system \
+	  --with-systemdpresetdir=/lib/systemd/system-preset \
 	  --with-udevdir=/lib/udev \
 	  --with-config=user
 
@@ -88,19 +90,25 @@ override_dh_install:
 override_dh_installdocs:
 	dh_installdocs --link-doc=zfs-doc
 
+#override_dh_systemd_enable:
+#	dh_systemd_enable -pzfsutils --name 
+
+#override_dh_systemd_start:
+#	dh_systemd_start -pcorosync-pve --name corosync --no-start
+
 override_dh_installinit:
-	@# Install debian/zfsutils.zfs.default as /etc/default/zfs.
-	dh_installinit --name=zfs
+#	@# Install debian/zfsutils.zfs.default as /etc/default/zfs.
+#	dh_installinit --name=zfs
 
-	@# Install the /etc/init.d/zfs-mount script.
-	@# Debian runs local mounts at sysv sequences [10..12] [08..09].
-	dh_installinit --name=zfs-mount \
-	  --no-restart-on-upgrade --no-start -- defaults 13 07
+#	@# Install the /etc/init.d/zfs-mount script.
+#	@# Debian runs local mounts at sysv sequences [10..12] [08..09].
+#	dh_installinit --name=zfs-mount \
+#	  --no-restart-on-upgrade --no-start -- defaults 13 07
 
-	@# Debian runs nfs-kernel-server at sysv sequence 17 01,
-	@# iscsitarget at 02 01, and samba at 01 02.
-	dh_installinit --name=zfs-share \
-	  --no-restart-on-upgrade --no-start -- defaults 18 00
+#	@# Debian runs nfs-kernel-server at sysv sequence 17 01,
+#	@# iscsitarget at 02 01, and samba at 01 02.
+#	dh_installinit --name=zfs-share \
+#	  --no-restart-on-upgrade --no-start -- defaults 18 00
 
 
 override_dh_installudev:
