submodules: add upstream mirrors
pointing to ZFS on Linux's github repositories

Reviewed-by: Stoiko Ivanov <s.ivanov@proxmox.com>
Tested-by: Stoiko Ivanov <s.ivanov@proxmox.com>
Signed-off-by: Fabian Grünbichler <f.gruenbichler@proxmox.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "spl-debian"]
 	path = spl-debian
 	url = ../mirror_spl-debian
+[submodule "zfs/upstream"]
+	path = zfs/upstream
+	url = ../mirror_zfs
+[submodule "spl/upstream"]
+	path = spl/upstream
+	url = ../mirror_spl
