debian: switch to DH 10
Reviewed-by: Stoiko Ivanov <s.ivanov@proxmox.com>
Tested-by: Stoiko Ivanov <s.ivanov@proxmox.com>
Signed-off-by: Fabian Grünbichler <f.gruenbichler@proxmox.com>

--- a/spl/debian/control
+++ b/spl/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Proxmox Support Team <support@proxmox.com>
 Build-Depends: autogen,
                autotools-dev,
-               debhelper (>= 9),
+               debhelper (>= 10~),
                dh-autoreconf,
                libtool
 Standards-Version: 4.1.2
