--- a/debian/rules
+++ b/debian/rules
@@ -28,7 +28,8 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 	  --bindir=/usr/bin \
 	  --sbindir=/sbin \
-	  --libdir=/lib \
+	  --libdir=/lib/"$(DEB_HOST_MULTIARCH)" \
+	  --with-pkgconfigdir='/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig' \
 	  --with-udevdir=/lib/udev \
 	  --with-zfsexecdir=/usr/lib/zfs-linux \
 	  --enable-systemd \
@@ -38,6 +39,11 @@ override_dh_auto_configure:
 	  --with-systemdpresetdir=/lib/systemd/system-preset \
 	  --with-systemdgeneratordir=/lib/systemd/system-generators \
 	  --with-config=user
+
+	for i in $(wildcard $(CURDIR)/debian/*.install.in) ; do \
+		basename "$$i" | grep _KVERS_ && continue ; \
+		sed 's/@DEB_HOST_MULTIARCH@/$(DEB_HOST_MULTIARCH)/g' "$$i" > "$${i%%.in}" ; \
+	done
 
 override_dh_auto_test:
 	# The dh_auto_test rule is disabled because
@@ -62,9 +68,9 @@ override_dh_auto_install:
 	@# Zed has dependencies outside of the system root.
 	mv '$(CURDIR)/debian/tmp/sbin/zed' '$(CURDIR)/debian/tmp/usr/sbin/zed'
 
-	mkdir -p $(CURDIR)/debian/tmp/usr/lib
-	for i in `ls $(CURDIR)/debian/tmp/lib/*.so`; do \
-		ln -s /lib/`readlink $${i}` $(CURDIR)/debian/tmp/usr/lib/`basename $${i}`; \
+	mkdir -p $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
+	for i in `ls $(CURDIR)/debian/tmp/lib/$(DEB_HOST_MULTIARCH)/*.so`; do \
+		ln -s /lib/$(DEB_HOST_MULTIARCH)/`readlink $${i}` $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/`basename $${i}`; \
 		rm $${i}; \
 	done
 
