package zfsbootenv library
adapted from debian-upstream 0be5e4edc2eef9885fd03e9c797b9429da539ce2

Signed-off-by: Stoiko Ivanov <s.ivanov@proxmox.com>

--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Architecture: linux-any
 Depends: libnvpair2linux (= ${binary:Version}),
          libuutil2linux (= ${binary:Version}),
          libzfs3linux (= ${binary:Version}),
+         libzfsbootenv1linux (= ${binary:Version}),
          libzpool3linux (= ${binary:Version}),
          ${misc:Depends}
 Provides: libnvpair-dev, libuutil-dev
@@ -75,6 +76,17 @@ Description: OpenZFS filesystem library for Linux
  compression, encryption, snapshots, and more.
  .
  The OpenZFS library provides support for managing OpenZFS filesystems.
+
+Package: libzfsbootenv1linux
+Section: contrib/libs
+Architecture: linux-any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: OpenZFS filesystem library for Linux
+ OpenZFS is a storage platform that encompasses the functionality of
+ traditional filesystems and volume managers. It supports data checksums,
+ compression, encryption, snapshots, and more.
+ .
+ The zfsbootenv library provides support for modifying ZFS label information.
 
 Package: libzpool3linux
 Section: contrib/libs
