d/rules: fix resolving sphinx-build on bullseye
It's included as link in /usr/bin there, so the grep matched it
twice, the actual file plus the link, resulting in a build failure.

Signed-off-by: Thomas Lamprecht <t.lamprecht@proxmox.com>

--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ include /usr/share/dpkg/default.mk
 VERSION := $(DEB_VERSION_UPSTREAM)
 REVISION := $(shell echo $(DEB_VERSION) | cut -d- -f2)
 
-SPHINX_BUILD = $(shell dpkg -L python3-sphinx | grep "sphinx-build$$")
+SPHINX_BUILD = $(shell dpkg -L python3-sphinx | grep -m 1 "/sphinx-build$$")
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
