--- a/debian/control
+++ b/debian/control
@@ -21,12 +21,12 @@ Homepage: https://www.zfsonlinux.org/
 Vcs-Git: https://git.proxmox.com/git/zfsonlinux.git
 Vcs-Browser: https://git.proxmox.com/?p=zfsonlinux.git;a=summary
 
-Package: libnvpair2linux
+Package: libnvpair3linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libnvpair1, libnvpair1linux
-Replaces: libnvpair1, libnvpair1linux
+Breaks: libnvpair1, libnvpair1linux, libnvpair2linux, libnvpair3
+Replaces: libnvpair1, libnvpair1linux, libnvpair2linux, libnvpair3
 Description: Solaris name-value library for Linux
  This library provides routines for packing and unpacking nv pairs for
  transporting data across process boundaries, transporting between
@@ -44,12 +44,12 @@ Description: PAM module for managing encryption keys for ZFS
  This provides a Pluggable Authentication Module (PAM) that automatically
  unlocks encrypted ZFS datasets upon login.
 
-Package: libuutil2linux
+Package: libuutil3linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libuutil1, libuutil1linux
-Replaces: libuutil1, libuutil1linux
+Breaks: libuutil1, libuutil1linux, libuutil2linux, libuutil3
+Replaces: libuutil1, libuutil1linux, libuutil2linux, libuutil3
 Description: Solaris userland utility library for Linux
  This library provides a variety of glue functions for ZFS on Linux:
   * libspl: The Solaris Porting Layer userland library, which provides APIs
@@ -64,26 +64,26 @@ Description: Solaris userland utility library for Linux
 Package: libzfslinux-dev
 Section: contrib/libdevel
 Architecture: linux-any
-Depends: libnvpair2linux (= ${binary:Version}),
-         libuutil2linux (= ${binary:Version}),
-         libzfs3linux (= ${binary:Version}),
+Depends: libnvpair3linux (= ${binary:Version}),
+         libuutil3linux (= ${binary:Version}),
+         libzfs4linux (= ${binary:Version}),
          libzfsbootenv1linux (= ${binary:Version}),
-         libzpool3linux (= ${binary:Version}),
+         libzpool4linux (= ${binary:Version}),
          ${misc:Depends}
 Provides: libnvpair-dev, libuutil-dev
 Description: OpenZFS filesystem development files for Linux
  Header files and static libraries for compiling software against
  libraries of OpenZFS filesystem.
  .
- This package includes the development files of libnvpair2, libuutil2,
- libzpool3 and libzfs3.
+ This package includes the development files of libnvpair3, libuutil3,
+ libzpool4 and libzfs4.
 
-Package: libzfs3linux
+Package: libzfs4linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libzfs2, libzfs2linux
-Replaces: libzfs2, libzfs2linux
+Breaks: libzfs2, libzfs2linux, libzfs3linux, libzfs4
+Replaces: libzfs2, libzfs2linux, libzfs3linux, libzfs4
 Description: OpenZFS filesystem library for Linux
  OpenZFS is a storage platform that encompasses the functionality of
  traditional filesystems and volume managers. It supports data checksums,
@@ -95,6 +95,8 @@ Package: libzfsbootenv1linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: libzfs2, libzfs4
+Replaces: libzfs2, libzfs4
 Description: OpenZFS filesystem library for Linux
  OpenZFS is a storage platform that encompasses the functionality of
  traditional filesystems and volume managers. It supports data checksums,
@@ -102,12 +104,12 @@ Description: OpenZFS filesystem library for Linux
  .
  The zfsbootenv library provides support for modifying ZFS label information.
 
-Package: libzpool3linux
+Package: libzpool4linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libzpool2, libzpool2linux
-Replaces: libzpool2, libzpool2linux
+Breaks: libzpool2, libzpool2linux, libzpool3linux, libzpool4
+Replaces: libzpool2, libzpool2linux, libzpool3linux, libzpool4
 Description: OpenZFS pool library for Linux
  OpenZFS is a storage platform that encompasses the functionality of
  traditional filesystems and volume managers. It supports data checksums,
@@ -242,10 +244,10 @@ Package: zfs-dbg
 Section: contrib/debug
 Priority: optional
 Architecture: linux-any
-Depends: libnvpair2linux (= ${binary:Version}),
-         libuutil2linux (= ${binary:Version}),
-         libzfs3linux (= ${binary:Version}),
-         libzpool3linux (= ${binary:Version}),
+Depends: libnvpair3linux (= ${binary:Version}),
+         libuutil3linux (= ${binary:Version}),
+         libzfs4linux (= ${binary:Version}),
+         libzpool4linux (= ${binary:Version}),
          zfs-zed (= ${binary:Version}),
          zfsutils-linux (= ${binary:Version}),
          ${misc:Depends}
@@ -254,8 +256,8 @@ Description: Debugging symbols for OpenZFS userland libraries and tools
  traditional filesystems and volume managers. It supports data checksums,
  compression, encryption, snapshots, and more.
  .
- This package contains the debugging symbols for libzpool3linux, libzfs3linux,
- libnvpair2linux, libuutil2linux, zfs-zed and zfsutils-linux.
+ This package contains the debugging symbols for libzpool4linux, libzfs4linux,
+ libnvpair3linux, libuutil3linux, zfs-zed and zfsutils-linux.
 
 Package: spl
 Section: contrib/metapackages
