buildsys: validate ABI at build time
this commit follows: 93661343d884a5339631afd7b683e232d20b7baf and
0b52b09c6083bd590e46cb9884d06bae1b712a2a from debian-upstream [0].

the `make checkabi` invocation takes < .4s on my workstation - so it
seems worth the change.

[0] https://salsa.debian.org/zfsonlinux-team/zfs

Signed-off-by: Stoiko Ivanov <s.ivanov@proxmox.com>

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: zfs-linux
 Section: contrib/kernel
 Priority: optional
 Maintainer: Proxmox Support Team <support@proxmox.com>
-Build-Depends: debhelper (>= 10~),
+Build-Depends: abigail-tools,
+               debhelper (>= 10~),
                dh-python,
                libblkid-dev,
                libelf-dev,
