buildsys: switch to automatic debug packages
automatically generated -dbgsym packages has become the default
(see dh_strip(1) and [0]).
While we have no direct need to migrate, it helps in avoiding
debhelper bug 939164 (see [1]), when migrating to debhelper-compat 12.
(alternative option would be to depend on debhelper from backports, or
to skip dh_dwz).

The change is well described in dh_strip(1).

[0] https://wiki.debian.org/AutomaticDebugPackages
[1] https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=939164
Signed-off-by: Stoiko Ivanov <s.ivanov@proxmox.com>

--- a/debian/rules
+++ b/debian/rules
@@ -92,7 +92,7 @@ override_dh_makeshlibs:
 	dh_makeshlibs -a -V
 
 override_dh_strip:
-	dh_strip --dbg-package=zfs-dbg
+	dh_strip --dbgsym-migration='zfs-dbg (<< 2.0.4~)'
 
 override_dh_auto_clean:
 	find . -name .gitignore -delete
