do not restart most services upon upgrade
zfs-zed is the only classical daemon, which benefits from a restart,
so restart only zfs-zed.

Noticed during the transition from ZFS 0.8.x to 2.0.0 zvol_wait, which
is called by zfs-volume-wait.service was changed to also output the
redacted_snap property of the datasets. This property does not exist
if the kernelmodule is still 0.8.x, causing an error to be printed to
the journal.

Signed-off-by: Stoiko Ivanov <s.ivanov@proxmox.com>

--- a/debian/rules
+++ b/debian/rules
@@ -107,6 +107,14 @@ override_dh_install:
 override_dh_missing:
 	dh_missing --fail-missing
 
+override_dh_installsystemd:
+	# these to lines prevent the restarting of all systemd services, except
+	# zfs-zed - they should not be restarted (importing, mounting, creating
+	# links in /dev, and can cause erros in the log
+	# (upon major.minor change)
+	dh_installsystemd --no-stop-on-upgrade -X zfs-zed.service
+	dh_installsystemd --name zfs-zed
+
 override_dh_installdocs:
 	dh_installdocs
 ifeq (,$(findstring nodoc, $(DEB_BUILD_OPTIONS)))
