d/control: add transitional zfs-dbg package
suggesting the new -dbgsym packages without having a strict dependency
on a specific version of the library packages, like the old no longer
built zfs-dbg package had.

this commit can be reverted after the package has been uploaded once, or
kept for one release cycle if we might do the -dbgsym migration in
oldstable as well to avoid the oldstable zfs-dbg package version
overtaking the transitional one here.

Signed-off-by: Fabian Grünbichler <f.gruenbichler@proxmox.com>

--- a/debian/control
+++ b/debian/control
@@ -265,3 +265,17 @@ Description: Solaris Porting Layer user-space utilities for Linux (dummy)
  to Linux primitives.
  .
  This is a transitional dummy package. It can safely be removed.
+
+Package: zfs-dbg
+Section: contrib/metapackages
+Architecture: all
+Suggests: libnvpair3linux-dbgsym,
+         libpam-zfs-dbgsym,
+         libuutil3linux-dbgsym,
+         libzfs4linux-dbgsym,
+         libzfsbootenv1linux-dbgsym,
+         libzpool4linux-dbgsym,
+         zfs-test-dbgsym,
+         zfsutils-linux-dbgsym,
+         zfs-zed-dbgsym,
+Description: Transitional package. It can be safely removed.
