--- a/debian/control
+++ b/debian/control
@@ -70,7 +70,7 @@ Depends: libssl-dev | libssl1.0-dev,
          libuutil3linux (= ${binary:Version}),
          libzfs4linux (= ${binary:Version}),
          libzfsbootenv1linux (= ${binary:Version}),
-         libzpool4linux (= ${binary:Version}),
+         libzpool5linux (= ${binary:Version}),
          ${misc:Depends}
 Provides: libnvpair-dev, libuutil-dev
 Description: OpenZFS filesystem development files for Linux
@@ -78,7 +78,7 @@ Description: OpenZFS filesystem development files for Linux
  libraries of OpenZFS filesystem.
  .
  This package includes the development files of libnvpair3, libuutil3,
- libzpool4 and libzfs4.
+ libzpool5 and libzfs4, libzfsbootenv1.
 
 Package: libzfs4linux
 Section: contrib/libs
@@ -106,7 +106,7 @@ Description: OpenZFS filesystem library for Linux
  .
  The zfsbootenv library provides support for modifying ZFS label information.
 
-Package: libzpool4linux
+Package: libzpool5linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
@@ -274,7 +274,7 @@ Suggests: libnvpair3linux-dbgsym,
          libuutil3linux-dbgsym,
          libzfs4linux-dbgsym,
          libzfsbootenv1linux-dbgsym,
-         libzpool4linux-dbgsym,
+         libzpool5linux-dbgsym,
          zfs-test-dbgsym,
          zfsutils-linux-dbgsym,
          zfs-zed-dbgsym,
