--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,7 @@ override_dh_auto_test:
 override_dh_auto_test:
 ifeq (amd64,$(DEB_HOST_ARCH))
 	# Upstream provides an ABI guarantee that we validate here
-	$(MAKE) checkabi
+	-$(MAKE) checkabi
 endif
 
 	# The dh_auto_test rule is disabled because
