--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: abigail-tools,
                debhelper-compat (= 12),
                dh-python,
                libblkid-dev,
+               libcurl4-openssl-dev | libcurl4-gnutls-dev,
                libelf-dev,
                libpam0g-dev,
                libssl-dev | libssl1.0-dev,
@@ -84,9 +85,12 @@ Package: libzfs4linux
 Section: contrib/libs
 Architecture: linux-any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+# The libcurl4 is loaded through dlopen("libcurl.so.4").
+# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=988521
+Recommends: libcurl4
 Breaks: libzfs2, libzfs2linux, libzfs3linux, libzfs4
 Replaces: libzfs2, libzfs2linux, libzfs3linux, libzfs4
-Description: OpenZFS filesystem library for Linux
+Description: OpenZFS filesystem library for Linux - general support
  OpenZFS is a storage platform that encompasses the functionality of
  traditional filesystems and volume managers. It supports data checksums,
  compression, encryption, snapshots, and more.
